--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -15,7 +15,6 @@ input,
 select,
 textarea {
   border: 1px solid var(--menu-border-color);
-  box-sizing: border-box;
   font-weight: normal;
   line-height: $line-height-small;
   margin: 0 0 1em 0;
