--- a/assets/scss/_modals.scss
+++ b/assets/scss/_modals.scss
@@ -17,7 +17,6 @@
     0 0 0 1px #ddd,
     1px 1px 3px rgba( 0, 0, 0, 0.2 )
   ;
-  box-sizing: border-box;
   margin: 3px;
   min-width: 330px;
   max-height: 90vh;
